--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
           <a href="#section4" class="btn">vincenzo</a>
         </div>
       
+        <div class="presection">
         <div class="section" id="section1">
         <h2>Guido</h2>
         <p>Guido  <br>
@@ -47,6 +48,7 @@
         <p>Vincenzo <br> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit ex nisi obcaecati, quasi laborum voluptatum omnis sit non debitis ullam numquam delectus vero voluptatem sint, minima atque id excepturi quibusdam.</p>
       </div>
     
+    </div>
 
 
     <div class="infobox">
