--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
         <div class="lato-infobox">
           <h3>Profili instagram:</h3>
           <ul>
-            <li><a href="https://www.instagram.com/hl_wxrthlxss/">ig maldarelli</a></li>
+            <li><a href="https://www.instagram.com/hl_wxrthlxss/">ig guido</a></li>
             <li><a href="https://www.instagram.com/_giuseppecaiffa_/">ig caiffa</a></li>
             <li><a href="https://www.instagram.com/giuseppe__palumbo__/">ig palumbo</a></li>
-            <li><a href="https://www.instagram.com/vincenzo.adamo_/">ig adamo</a></li>
+            <li><a href="https://www.instagram.com/vincenzo.adamo_/">ig vincenzo</a></li>
           </ul>
         </div>
       </div>
